--- a/src/styles/scheme/colors.scss
+++ b/src/styles/scheme/colors.scss
@@ -24,6 +24,9 @@ body {
 	--color-container: var(--color-shade-dark);
 	--color-separator: var(--color-shade-pale);
 
+	--color-list-tile: var(--color-background);
+	--color-list-tile-hover: var(--color-shade-dark);
+
 	--color-button: var(--color-shade-darker);
 	--color-button-hover: var(--color-shade-darkest);
 	--color-button-active-outline: var(--color-shade-pale);
