introduce token properties panel

--- a/src/styles/interface.scss
+++ b/src/styles/interface.scss
@@ -73,6 +73,14 @@ button {
 			margin: 0;
 		}
 
+		&[data-size='small'] {
+			font-size: inherit;
+		}
+
+		:not(:hover, :active) {
+			color: inherit;
+		}
+
 		&:hover {
 			background-color: var(--color-button-hover);
 			outline-color: var(--color-button-hover);
