--- a/src/styles/scheme/colors.scss
+++ b/src/styles/scheme/colors.scss
@@ -54,6 +54,7 @@ body {
 
 	--color-input-background: var(--color-shade-darkest);
 	--color-input-outline: var(--color-shade-mid);
+	--color-input-hover-outline: var(--color-shade-light);
 }
 
 body {
