Use explicit relative paths in SCSS imports

--- a/src/styles/interface.scss
+++ b/src/styles/interface.scss
@@ -1,4 +1,4 @@
-@use 'scheme.scss' as *;
+@use './scheme.scss' as *;
 
 @function cubic-out($duration, $aria-duration) {
 	@return $duration cubic-bezier(0.165, 0.84, 0.44, 1), outline $aria-duration;
