--- a/src/packages/ui/scss/scheme/text.scss
+++ b/src/packages/ui/scss/scheme/text.scss
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Recursive&family=Lato:ital,wght@0,400;0,700;0,900;1,400&family=Fira+Mono&display=swap');
-
 %font-paragraph {
 	font-family: 'Lato', sans-serif;
 }
 
+%font-monospace {
+	font-family: 'Fira Mono', monospace;
+}
+
 %font-heading {
-	font-family: 'Recursive', serif;
+	font-family: 'Recursive Variable', sans-serif;
 	font-weight: normal;
 	margin: 0;
 }
@@ -25,7 +27,7 @@ h3 {
 }
 
 pre {
-	font-family: 'Fira Mono', monospace;
+	@extend %font-paragraph;
 }
 
 .code {
